--- a/docs/_static/rtd.css
+++ b/docs/_static/rtd.css
@@ -33,10 +33,11 @@ body {
                  'Verdana', sans-serif;
     font-size: 14px;
     */
-    letter-spacing: -0.01em;
+    /*letter-spacing: -0.01em;*/
     line-height: 150%;
     text-align: center;
     color: black;
+    background-color: #eee;
     padding: 0;
 
     margin: 0;
@@ -44,15 +45,13 @@ body {
 }
 
 div.document {
-    background-color: white;
     text-align: left;
-    background-image: url(contents.png);
-    background-repeat: repeat-x;
 }
 
 div.bodywrapper {
-    margin: 0 240px 0 0;
-    border-right: 1px solid #ccc;
+    background-color: #ffffff;
+    margin: 0 0 0 240px;
+    border-left: 1px solid #ccc;
 }
 
 div.body {
@@ -111,10 +110,13 @@ div.related ul li a:hover {
     color: #ffffff;
     text-decoration: none;
 }
+/*
 div.related ul li a tt:hover {
     background: inherit !important;
     color: inherit !important;
+    border: inherit !important;
 }
+*/
 
 /* These aren't too useful, since the related bar
  * contains both left- and right-floated items */
@@ -129,7 +131,7 @@ div.sphinxsidebar {
     margin: 0;
     padding: 0 1em;
     width: 210px;
-    float: right;
+    float: left;
     font-size: 1em;
     text-align: left;
 }
@@ -185,22 +187,45 @@ p {
 }
 
 a {
-    color: #70a0b0;
+    /* color: #355f7c; */
+    color: #444;
     text-decoration: none;
+    border-bottom: 1px solid #ccc;
 }
 
 a:hover {
-    color: #5080d0;
-    text-decoration: underline;
+    color: #111111;
+    text-decoration: none;
+    border-bottom: 1px solid #111111;
 }
 
+/*
 a tt {
-    border: 0;
-    color: #70a0b0;
+    color: #444;
+    text-decoration: none;
+    border-bottom: 1px solid #ccc;
 }
 
 a tt:hover {
-    color: #5080d0;
+    color: #111111;
+    text-decoration: none;
+    border-bottom: 1px solid #111111;
+}
+*/
+
+/* Permalink anchor */
+a.headerlink {
+    color: #ccc !important;
+    font-size: 1em;
+    margin-left: 6px;
+    padding: 0 4px 0 4px;
+    text-decoration: none !important;
+    border: none;
+}
+
+a.headerlink:hover {
+    color: #c60f0f !important;
+    border: none;
 }
 
 
@@ -242,18 +267,6 @@ h1 a.anchor:hover, h2 a.anchor:hover, h3 a.anchor:hover, h4 a.anchor:hover,
 h5 a.anchor:hover, h6 a.anchor:hover {
     color: #777;
     background-color: #eee;
-}
-
-a.headerlink {
-    color: #d1d9df !important;
-    font-size: 1em;
-    margin-left: 6px;
-    padding: 0 4px 0 4px;
-    text-decoration: none !important;
-}
-
-a.headerlink:hover {
-    color: #c60f0f !important;
 }
 
 cite, code, tt {
@@ -389,8 +402,9 @@ dl {
     margin: 1em 0 2.5em 0;
 }
 
+/* Highlight when you click an internal link */
 dt:target, .highlight {
-    background: #9edc5c;
+    background: #ffe080;
 }
 
 /* Search text box and "Go" button */
