--- a/docs/_static/rtd.css
+++ b/docs/_static/rtd.css
@@ -179,7 +179,14 @@ div.footer {
 
 div.footer a {
     color: #86989B;
+    text-decoration: none;
+    border: none;
+}
+
+div.footer a:hover {
+    color: #a6b8bb;
     text-decoration: underline;
+    border: none;
 }
 
 /* -- body styles ----------------------------------------------------------- */
@@ -410,25 +417,48 @@ dt:target, .highlight {
 }
 
 /* Search text box and "Go" button */
+#searchbox {
+    background: #ddd;
+    padding: 0.5em;
+    border-radius: 6px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+}
+#searchbox h3 {
+    margin-top: 0;
+}
 input,
 div.sphinxsidebar input {
-    border: 1px solid #444;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
+    border: none;
     float: left;
 }
 
 input[type="text"] {
-    padding: 2px;
+    margin: 0;
+    padding: 0;
+    height: 20px;
     width: 150px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    -webkit-border-top-left-radius: 3px;
+    -webkit-border-bottom-left-radius: 3px;
+    -moz-border-radius-topleft: 3px;
+    -moz-border-radius-bottomleft: 3px;
 }
 
 input[type="submit"] {
+    margin: 0;
+    height: 20px;
     color: #444;
-    background-color: #ddd;
-    padding: 2px 6px;
+    background-color: #eee;
+    padding: 0 6px;
     font-weight: bold;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    -webkit-border-top-right-radius: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+    -moz-border-radius-topright: 3px;
+    -moz-border-radius-bottomright: 3px;
 }
 
 input[type="submit"]:hover {
@@ -442,6 +472,6 @@ input[type="submit"]:hover {
 
 div.sphinxsidebar p.searchtip {
     clear: both;
-    padding: 0.2em 0;
+    padding: 0.5em 0 0 0;
 }
 
